--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-splash-screen": "~31.0.8",
     "expo-sqlite": "~16.0.9",
     "expo-status-bar": "~3.0.7",
+    "moti": "^0.30.0",
     "nativewind": "^4.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
